# repolens

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: release.yml
docs/: 01-overview.md  02-architecture.md  03-cli-design.md  04-development.md  README.md
scripts/: install.sh
src/: config.rs  db.rs  display.rs  fingerprint.rs  main.rs  models.rs  scanner.rs  search.rs
